KinD/cloudKind/backup/v0.3/manifestos/httproute-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
  hostnames:
    - "echo.0a0f122c.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-service
          port: 80
